Implementation of the header with the configurations and styles is done

--- a/index.html
+++ b/index.html
@@ -1,8 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="styles.css"/>
+    <title>Mercadolibre</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div>
+                <div class="nav-container-logo">
+                    <a class="nav-logo">
+                    </a>
+                </div>
+                <div class="nav-container-address">
+                    <span class="default-font-style">Ingresa tu domicilio</span>
+                </div>
+            </div>
+            <div>
+                <form class="input-container-style">
+                    <label>
+                        <input class="input-style" type="text" placeholder="Buscar productos, marcas y más...">
+                    </label>
+                </form>
+                <div class="align-items">
+                    <div class="nav-container-categories">
+                        <a class="dropdown-icon"><span class="dropdown-font-style">Categorías</span></a>
+                    </div>
+                    <div class="nav-offer-offer">
+                        <span class="default-font-style">Ofertas</span>
+                    </div>
+                    <div class="nav-offer-record">
+                        <span class="default-font-style">Historial</span>
+                    </div>
+                    <div class="nav-offer-market">
+                        <span class="default-font-style">Supermercado</span>
+                    </div>
+                    <div class="nav-offer-fashion">
+                        <span class="default-font-style">Moda</span>
+                    </div>
+                    <div class="nav-offer-sell">
+                        <span class="default-font-style">Vender</span>
+                    </div>
+                    <div class="nav-offer-help">
+                        <span class="default-font-style">Ayuda / PQR</span>
+                    </div>
+                    <div class="nav-offer-create">
+                        <span class="default-font-style">Crea tu cuenta Ingresa Mis compras</span>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="img1-general-styles-container">
+            <ul class="img1-container-styles">
+                <button class="button-img1-style"></button>
+                <button class="button-fill-img1-style"></button>
+                <button class="button-img1-style"></button>
+                <button class="button-img1-style"></button>
+                <button class="button-img1-style"></button>
+                <button class="button-img1-style"></button>
+            </ul>
+            <a class="img1-general-styles">
+                <img class="img1-styles" src="media/img1.png">
+            </a>
+        </div>
+    </main>
 <footer>
 </footer>
 </body>
