The benefits, subscription information and offers are implemented, with their respective styles and images used

--- a/index.html
+++ b/index.html
@@ -67,6 +67,181 @@
             <a class="img1-general-styles">
                 <img class="img1-styles" src="media/img1.png">
             </a>
+            <div class="container-settings-styles">
+                <div class="contain-cards-styles">
+                    <div class="container-card-settings">
+                        <span class="span-card-style">Hasta 48 cuotas</span>
+                    </div>
+                    <span class="container-see-more">Ver más</span>
+                    <img class="img-svg-card-styles" src="media/credit-card.svg">
+                </div>
+                <div class="contain-cards-styles">
+                    <div class="container-bank-settings">
+                        <span class="span-card-bank-style">Transferencia desde tu banco</span>
+                    </div>
+                    <span class="container-see-more">Ver más</span>
+                    <img class="img-svg-card-styles" src="media/transfer.svg">
+                </div>
+                <div class="contain-cards-styles">
+                    <div class="container-cash-settings">
+                        <span class="span-cash-style">Paga en efectivo</span>
+                    </div>
+                    <span class="container-see-more">Ver más</span>
+                    <img class="img-svg-card-styles" src="media/cash.svg">
+                </div>
+                <div class="contain-cards-style-more">
+                    <div class="container-transfer-settings">
+                        <span class="span-more-style">Más medios de pago</span>
+                    </div>
+                    <span class="container-see-more">Ver más</span>
+                    <img class="img-svg-card-styles" src="media/view-more.svg">
+                </div>
+            </div>
+            <div class="container-offer-styles">
+                <div class="span-offer-style"></div>
+                <span class="offer-span-style">Ofertas</span>
+                <span class="offer-view-all">Ver todas</span>
+                <div class="all-offer-styles">
+                    <div class="offer-1-style">
+                        <img class="img-offer1-style" src="media/offer1.png">
+                        <div class="img-offer1-text-position">
+                            <div class="text-offer1-style">
+                                <span class="text-style-offer1">Envío gratis</span>
+                                <div class="price-container-style">
+                                    <span class="span-price-style">$ 210.900</span>
+                                    <span class="discount-percent-style">32% OFF</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer-2-style">
+                        <img class="img-offer1-style" src="media/offer2.png">
+                        <div class="img-offer1-text-position">
+                            <div class="text-offer1-style">
+                                <span class="text-style-offer1">Envío gratis</span>
+                                <div class="price-container-style">
+                                    <span class="span-price-style">$ 210.900</span>
+                                    <span class="discount-percent-style">32% OFF</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer-3-style">
+                        <img class="img-offer1-style" src="media/offer3.png">
+                        <div class="img-offer1-text-position">
+                            <div class="text-offer1-style">
+                                <span class="text-style-offer1">Envío gratis</span>
+                                <div class="price-container-style">
+                                    <span class="span-price-style">$ 210.900</span>
+                                    <span class="discount-percent-style">32% OFF</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer-4-style">
+                        <img class="img-offer1-style" src="media/offer4.png">
+                        <div class="img-offer1-text-position">
+                            <div class="text-offer1-style">
+                                <span class="text-style-offer1">Envío gratis</span>
+                                <div class="price-container-style">
+                                    <span class="span-price-style">$ 210.900</span>
+                                    <span class="discount-percent-style">32% OFF</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer-5-style">
+                        <img class="img-offer1-style" src="media/offer5.png">
+                        <div class="img-offer1-text-position">
+                            <div class="text-offer1-style">
+                                <span class="text-style-offer1">Envío gratis</span>
+                                <div class="price-container-style">
+                                    <span class="span-price-style">$ 210.900</span>
+                                    <span class="discount-percent-style">32% OFF</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="subscribe-container-styles">
+                <div class="subscribe-information-style">
+                    <span class="suscription-information-style">Suscríbete al nivel 6</span>
+                    <div class="suscription-price-container-styles">
+
+                            <span class="suscription-price-style">$ 50.690</span>
+                            <span class="suscription-price-per-month">$ 17.899 /mes</span>
+                        <div class="pipe-style-price">
+                        </div>
+                    </div>
+                </div>
+                <div class="description-container-message">
+                    <span class="description-message">Consigue los mejores beneficios en Mercado libre</span>
+                    <div class="container-description-products-style">
+                        <div class="container-description-image">
+                            <div class="container-image-virtual-product">
+                                <img class="image-virtual-product" src="media/dplus.svg">
+                            </div>
+                            <span class="description-virtual-product">Disney+ sin cargo</span>
+                        </div>
+                        <div class="container-description-image2">
+                            <div class="container-image-virtual-product">
+                                <img class="image-virtual-product" src="media/starplus.svg">
+                            </div>
+                            <span class="description-virtual-product">Star+ sin cargo</span>
+                        </div>
+                        <div class="container-description-image3">
+                            <div class="container-image-virtual-product">
+                                <img class="image-virtual-product" src="media/car.svg">
+                            </div>
+                            <span class="description-send-product">Envíos gratis y rápidos desde $ 90.000 y 40% OFF en envíos de menos de $ 90.000</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="button-suscription-container">
+                    <a class="button-suscription-styles">
+                        <span class="button-suscription-text-style">Suscríbete</span>
+                    </a>
+                </div>
+            </div>
+            <div class="container-information-points">
+                <div class="span-offer-style"></div>
+                <span class="offer-span-style">Beneficios de Mercado Puntos</span>
+                <span class="see-all-benefits">Ver todos los beneficios</span>
+                <a class="container-information-points-image">
+                    <div class="container-widget1-information">
+                        <div class="container-img-widget">
+                            <span class="text-widget1">Sin cargo con el nivel 6</span>
+                            <span class="second-text-widget1">Disney+ y Star+</span>
+                        </div>
+                        <img class="img-combo-styles" src="media/combo.jpg">
+                    </div>
+                    <div class="degrade-style-widget"></div>
+                    <img class="image-widget-product" src="media/widget1.png">
+                </a>
+                <a class="container-information-points-image2">
+                    <div class="container-widget1-information">
+                        <div class="container-img-widget">
+                            <span class="text-widget1">Sin cargo con el nivel 6</span>
+                            <span class="second-text-widget1">Disney+ y Star+</span>
+                        </div>
+                        <img class="img-combo-styles" src="media/combo.jpg">
+                    </div>
+                    <div class="degrade2-style-widget"></div>
+                    <img class="image-widget-product" src="media/widget2.png">
+                </a>
+                <a class="container-information-points-image3">
+                    <div class="container-widget1-information">
+                        <div class="container-img-widget">
+                            <span class="text-widget1">Sin cargo con el nivel 6</span>
+                            <span class="second-text-widget1">Disney+ y Star+</span>
+                        </div>
+                        <img class="img-combo-styles" src="media/combo.jpg">
+                    </div>
+                    <div class="degrade3-style-widget"></div>
+                    <img class="image-widget-product" src="media/widget3.png">
+                </a>
+            </div>
         </div>
     </main>
 <footer>
