Stores with their properties and styles are implemented

--- a/index.html
+++ b/index.html
@@ -242,6 +242,130 @@
                     <img class="image-widget-product" src="media/widget3.png">
                 </a>
             </div>
+            <div class="container-discover-styles">
+                <span class="offer-span-style">Descubre</span>
+                <div class="container-discover-cards">
+                    <a class="container-discover-card-style">
+                        <img class="discover-image-style" src="media/discover-image1.png">
+                        <div class="text-discover-styles">
+                            <span class="renew-homework">RENUEVA TUS ESPACIOS</span>
+                            <span class="home-clothes">HOGAR Y MUEBLES</span>
+                            <span class="discount-style-home">HASTA 50% OFF</span>
+                            <div class="button-home-more-information">
+                                <span class="button-more-styles">Ver más</span>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="container-discover-card2-style">
+                        <img class="discover-image-style" src="media/discover-image2.png">
+                        <div class="text-discover-styles">
+                            <span class="renew-homework">SUSCRÍBETE AL NIVEL 6</span>
+                            <span class="home-clothes">POR SOLO</span>
+                            <span class="discount-style-home">$17.800 CADA MES</span>
+                            <div class="button-home-more-information">
+                                <span class="button-more-styles-suscription">Suscribirme</span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="container-group-images-styles">
+                <div class="span-offer-style"></div>
+                <span class="offer-span-style">Las mejores tiendas te esperan</span>
+                <span class="see-all-benefits">Ver tiendas</span>
+                <div class="general-images-container-group">
+                    <span class="text-description-group-image">Ver tienda</span>
+                    <div class="group1-images-container">
+                        <a class="container-group-image-1">
+                            <img class="img-group-general-styles" src="media/img-group1.svg">
+                        </a>
+                        <a class="container-group-image-2">
+                            <img class="img-group-general-styles" src="media/img-group2.svg">
+                        </a>
+                        <a class="container-group-image-3">
+                            <img class="img-group-general-styles" src="media/img-group3.svg">
+                        </a>
+                    </div>
+                    <div class="information-group-text">
+                        <span class="text-information-style">Lego</span>
+                    </div>
+                    <div class="lego-igame-styles-container">
+                        <img class="lego-image" src="media/lego-image.svg">
+                    </div>
+                    <div class="lego-logo-container">
+                        <img class="lego-logo" src="media/lego-logo.svg">
+                    </div>
+                </div>
+                <div class="general-images-container-group2">
+                    <span class="text-description-group-image">Ver tienda</span>
+                    <div class="group1-images-container">
+                        <a class="container-group-image-1">
+                            <img class="img-group-general-styles" src="media/xiaomi1.svg">
+                        </a>
+                        <a class="container-group-image-2">
+                            <img class="img-group-general-styles" src="media/xiaomi2.svg">
+                        </a>
+                        <a class="container-group-image-3">
+                            <img class="img-group-general-styles" src="media/xiaomi3.svg">
+                        </a>
+                    </div>
+                    <div class="information-group-text">
+                        <span class="text-information-style-xiaomi">Xiaomi</span>
+                    </div>
+                    <div class="lego-igame-styles-container">
+                        <img class="lego-image" src="media/background-xiaomi.svg">
+                    </div>
+                    <div class="lego-logo-container">
+                        <img class="lego-logo" src="media/xiaomi-logo.svg">
+                    </div>
+                </div>
+                <div class="general-images-container-group3">
+                    <span class="text-description-group-image">Ver tienda</span>
+                    <div class="group1-images-container">
+                        <a class="container-group-image-1">
+                            <img class="img-group-general-styles" src="media/oster1.svg">
+                        </a>
+                        <a class="container-group-image-2">
+                            <img class="img-group-general-styles" src="media/oster2.svg">
+                        </a>
+                        <a class="container-group-image-3">
+                            <img class="img-group-general-styles" src="media/oster3.svg">
+                        </a>
+                    </div>
+                    <div class="information-group-text">
+                        <span class="text-information-style-oster">Oster</span>
+                    </div>
+                    <div class="lego-igame-styles-container">
+                        <img class="lego-image" src="media/background-oster.svg">
+                    </div>
+                    <div class="lego-logo-container">
+                        <img class="lego-logo" src="media/oster-logo.svg">
+                    </div>
+                </div>
+                <div class="general-images-container-group4">
+                    <span class="text-description-group-image">Ver tienda</span>
+                    <div class="group1-images-container">
+                        <a class="container-group-image-1">
+                            <img class="img-group-general-styles" src="media/nikon1.svg">
+                        </a>
+                        <a class="container-group-image-2">
+                            <img class="img-group-general-styles" src="media/nikon2.svg">
+                        </a>
+                        <a class="container-group-image-3">
+                            <img class="img-group-general-styles" src="media/nikon3.svg">
+                        </a>
+                    </div>
+                    <div class="information-group-text">
+                        <span class="text-information-style-nikon">Nikon</span>
+                    </div>
+                    <div class="lego-igame-styles-container">
+                        <img class="lego-image" src="media/background-nikon.svg">
+                    </div>
+                    <div class="lego-logo-container">
+                        <img class="lego-logo" src="media/nikon-logo.svg">
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 <footer>
