--- a/index.html
+++ b/index.html
@@ -366,6 +366,124 @@
                     </div>
                 </div>
             </div>
+            <div class="market-container-styles">
+                <span class="offer-span-collections">Colecciones: </span>
+                <a class="dropdown-icon-market-style"><span class="collections-style-text">Supermercado</span></a>
+                <div class="container-market-styles">
+                    <a class="container-dog-image-styles">
+                        <img class="dog-image-styles" src="media/dog-image.svg">
+                        <div class="dog-text-style-container">
+                            <span class="supermarket-dog-style">SUPERMERCADO</span>
+                            <span class="discover-dog-style">DESCUBRE</span>
+                        </div>
+                    </a>
+                    <div class="container-items-styles">
+                        <a class="article1-container-style">
+                            <img class="img-article-style" src="media/article1.svg">
+                        </a>
+                        <a class="article2-container-style">
+                            <img class="img-article-style" src="media/article2.svg">
+                        </a>
+                        <a class="article3-container-style">
+                            <img class="img-article-style" src="media/article3.svg">
+                        </a>
+                        <a class="article4-container-style">
+                            <img class="img-article-style" src="media/article4.svg">
+                        </a>
+                        <a class="article5-container-style">
+                            <img class="img-article-style" src="media/article5.svg">
+                        </a>
+                        <a class="article6-container-style">
+                            <img class="img-article-style" src="media/article6.svg">
+                        </a>
+                        <a class="article7-container-style">
+                            <img class="img-article-style" src="media/article7.svg">
+                        </a>
+                        <a class="article8-container-style">
+                            <img class="img-article-style" src="media/article8.svg">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="categories-container-styles">
+                <span class="offer-span-collections">Categorías populares</span>
+                <div class="general-container-styles">
+                    <div class="general-container-style-2">
+                        <div class="general-container-style-3">
+                            <div class="container-group-image-collections-1">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-style">Carros, Motos y Otros</span>
+                                    <img class="icon-svg-style" src="media/iconSvg1.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-style">Celulares y teléfonos</span>
+                                    <img class="icon-svg-style" src="media/iconSvg2.svg">
+                                </a>
+                            </div>
+                            <div class="container-group-image-collections-2">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-less-style">Computación</span>
+                                    <img class="icon-svg-style" src="media/iconSvg3.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-style">Belleza y Cuidado Personal</span>
+                                    <img class="icon-svg-style" src="media/iconSvg4.svg">
+                                </a>
+                            </div>
+                            <div class="container-group-image-collections-3">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-medium-style">Ropa y Accesorios</span>
+                                    <img class="icon-svg-style" src="media/iconSvg5.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-medium-style">Deportes y Fitness</span>
+                                    <img class="icon-svg-style" src="media/iconSvg6.svg">
+                                </a>
+                            </div>
+                            <div class="container-group-image-collections-4">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-style">Accesorios para Vehículos</span>
+                                    <img class="icon-svg-style" src="media/iconSvg7.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-style">Consola y videoJuegos</span>
+                                    <img class="icon-svg-style" src="media/iconSvg8.svg">
+                                </a>
+                            </div>
+                            <div class="container-group-image-collections-5">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-medium-style">Electrodomésticos</span>
+                                    <img class="icon-svg-style" src="media/iconSvg9.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-medium-style">Juegos y Juguetes</span>
+                                    <img class="icon-svg-style" src="media/iconSvg10.svg">
+                                </a>
+                            </div>
+                            <div class="container-group-image-collections-6">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-style">Cámaras y Accesorios</span>
+                                    <img class="icon-svg-style" src="media/iconSvg11.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-less-style">Herramientas</span>
+                                    <img class="icon-svg-style" src="media/iconSvg12.svg">
+                                </a>
+                            </div>
+                            <div class="container-group-image-collections-7">
+                                <a class="image-collection-1">
+                                    <span class="ico-image1-style">Carros, Motos y Otros</span>
+                                    <img class="icon-svg-style" src="media/iconSvg13.svg">
+                                </a>
+                                <a class="image-collection-2">
+                                    <span class="ico-image1-style">Celulares y teléfonos</span>
+                                    <img class="icon-svg-style" src="media/iconSvg14.svg">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 <footer>
