The latest footer components and styles are implemented

--- a/index.html
+++ b/index.html
@@ -487,6 +487,57 @@
         </div>
     </main>
 <footer>
+    <div class="footer-general-container">
+        <div class="footer-container-2">
+            <section class="footer-section1-style">
+                <div class="section-styles-container-1">
+                    <div class="section-container-style1">
+                        <span class="text-footer-image1">Paga con tarjeta o en efectivo</span>
+                        <span class="text-footer-image2">Con Mercado Pago, paga en cuotas y aprovecha la comodidad de financiación que te da tu banco, o hazlo con efectivo en puntos de pago. ¡Y siempre es seguro!</span>
+                        <span class="text-footer-image3">Cómo pagar con Mercado Pago</span>
+                        <img class="image-footer-style1" src="media/payment-card.svg">
+                    </div>
+                </div>
+                <div class="section-styles-container-2 properties-footer">
+                    <div class="section-container-style1 properties-footer">
+                        <div class="properties-footer-after"></div>
+                        <span class="text-footer-image1">Envío gratis desde $ 90.000</span>
+                        <span class="text-footer-image2">Con solo estar registrado en Mercado Libre, tienes envíos gratis en miles de productos seleccionados.</span>
+                        <span class="text-footer-image3">Conoce más sobre este beneficio</span>
+                        <img class="image-footer-style1" src="media/shipping.svg">
+                    </div>
+                </div>
+                <div class="section-styles-container-3">
+                    <div class="section-container-style1">
+                        <span class="text-footer-image1">Seguridad, de principio a fin</span>
+                        <span class="text-footer-image2">¿No te gusta? ¡Devuélvelo! En Mercado Libre, no hay nada que no puedas hacer, porque estás siempre protegido.</span>
+                        <span class="text-footer-image3">Cómo te protegemos</span>
+                        <img class="image-footer-style1" src="media/shipping.svg">
+                    </div>
+                </div>
+            </section>
+            <div class="contact-footer-information-style">
+                <div class="generic-footer-information-style">
+                    <div class="contact-information-contain-style">
+                        <span class="text-generic-information-style">Copyright © 1999-2023 MercadoLibre Colombia LTDA.</span>
+                        <ul class="ul-information-container-style">
+                            <span class="text2-information-style">www.sic.gov.co</span>
+                            <span class="text3-information-style">Ayuda / PQR</span>
+                            <span class="text4-information-style">Accesibilidad</span>
+                            <span class="text5-information-style">Cómo cuidamos tu privacidad</span>
+                            <span class="text6-information-style">Términos y condiciones</span>
+                            <span class="text7-information-style">Trabaja con nosotros</span>
+                        </ul>
+                    </div>
+                    <span class="text1-information-style">Carrera 17 Número 93-09 Piso 3, Bogotá D.C. Colombia</span>
+                </div>
+                <div class="last-footer-information-container">
+                    <img class="last-image1-style" src="media/sic.png">
+                    <img class="last-image2-style" src="media/pum.png">
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
