Corrections and bug fixes

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                         <span class="text-footer-image1">Seguridad, de principio a fin</span>
                         <span class="text-footer-image2">¿No te gusta? ¡Devuélvelo! En Mercado Libre, no hay nada que no puedas hacer, porque estás siempre protegido.</span>
                         <span class="text-footer-image3">Cómo te protegemos</span>
-                        <img class="image-footer-style1" src="media/shipping.svg">
+                        <img class="image-footer-style1" src="media/protected.svg">
                     </div>
                 </div>
             </section>
